app/assets/stylesheets/events.css.scss
// Place all the styles related to the event controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
#calendar table {
  border-collapse: collapse;
  width: 100%;
}

#calendar td,
#calendar th {
  font-family: "Lucida Grande",arial,helvetica,sans-serif;
  font-size: 10px;
  padding: 6px;
  border: 1px solid #999;
}

#calendar th {
  background: #DDD;
  color: #666;
  text-align: center;
  width: 14.2857142857143%;
}

#calendar td {
  background: #FFF;
  color: #777;
  height: 65px;
  vertical-align: top;
  font-size: 16px;
}

#calendar td a {
  text-decoration: none;
  color: black;
}

#calendar td .task {
  font-weight: bolder;
  font-size: 12px;
}

#calendar .notmonth {
  color: #CCC;
}

#calendar .notmonth a {
  text-decoration: none;
  color: #CCC;
}

#calendar #month {
  margin: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}

#calendar #month a, #calendar #month a:hover {
  text-decoration: none;
  padding: 0 10px;
  color: #999;
}

#calendar .today {
  background-color: #D7F2FF;
}

#calendar ul {
  margin: 0;
  margin-top: 5px;
  padding: 0;
  list-style: none;
}

#calendar li {
  margin: 0;
  padding: 0px;
  font-size: 11px;
  text-align: left;
}

#calendar li span {
  font-weight: bold;
}

#calendar-day-view {
  width: 100%;
  height: 1440px;
  border-collapse: collapse;
  border: 1px solid #CCC;
}

#calendar-day-view #time-td {
  width: 50px;
  text-align: center;
}

div .event {
  position: absolute;
  width: 300px;
  left: 80px;
  border: 1px solid #CCC;
  background-color: #4C4C4C;
  color: #FFF;
}

